# django-posty

./: .gitignore  LICENSE  Readme.md  justfile  pyproject.toml
example_project/project/: settings.py
posty/: admin.py  apps.py  constants.py  exceptions.py  filters.py  forms.py  managers.py  models.py
posty/migrations/: 0001_initial.py
posty/templates/posty/: change_form.html  preview_launcher.html  preview_text.html
